Add total calorie count to view

--- a/app/views/dishes/show.html.erb
+++ b/app/views/dishes/show.html.erb
@@ -9,3 +9,6 @@
     <p><%= ingredient.name %> - <%= ingredient.calories %> calories</p>
   <% end %>
 </section>
+<section id="total_calories">
+  <br><p>Total calories: <%= @dish.total_calorie_count %></p>
+</section>
