--- a/app/views/ingredients/index.html.erb
+++ b/app/views/ingredients/index.html.erb
@@ -1,2 +1,6 @@
 <h2>Ingredients used by <%= @chef.name %></h2>
 <%= @chef.ingredients_used.join(', ') %>
+<h2>Most Popular Ingredients</h2>
+<section id="popular">
+  <%= @chef.most_popular_ingredients.join(', ') %>
+</section>
